--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "server": "nodemon server",
-    "dev": "concurrently \"redis-server\" \"npm run server\""
+    "dev": "concurrently \"npm run server\""
   },
   "author": "Chuck",
   "license": "ISC"
