--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Online Shop",
   "main": "server.js",
   "dependencies": {
-    "express": "^4.17.1",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -16,6 +15,8 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "express-rate-limit": "^5.1.3",
     "express-slow-down": "^1.3.1",
@@ -33,7 +34,8 @@
     "ra-input-rich-text": "^3.7.1",
     "rate-limit-redis": "^2.0.0",
     "redis": "^3.0.2",
-    "sharp": "^0.26.0"
+    "sharp": "^0.26.0",
+    "stripe": "^8.114.0"
   },
   "devDependencies": {},
   "scripts": {
