--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Online Shop",
   "main": "server.js",
   "dependencies": {
+    "@mongoosejs/double": "^0.2.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
