--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "mongoose": "^5.9.14",
+    "mongoose-sequence": "^5.3.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.16",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "ra-input-rich-text": "^3.7.1",
