--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-validator": "^6.5.0",
     "fresh": "^0.5.2",
     "helmet": "^4.1.0",
+    "image-size": "^0.9.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "moment": "^2.27.0",
