--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "bunyan": "^1.8.14",
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
     "concurrently": "^5.2.0",
@@ -33,13 +34,15 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.16",
+    "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "ra-input-rich-text": "^3.7.1",
     "rate-limit-redis": "^2.0.0",
     "redis": "^3.0.2",
     "sharp": "^0.26.0",
-    "stripe": "^8.114.0"
+    "stripe": "^8.114.0",
+    "xoauth2": "^1.2.0"
   },
   "devDependencies": {},
   "scripts": {
