--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "buffer-image-size": "^0.6.4",
     "bunyan": "^1.8.14",
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
@@ -26,7 +27,6 @@
     "express-validator": "^6.5.0",
     "fresh": "^0.5.2",
     "helmet": "^4.1.0",
-    "image-size": "^0.9.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "moment": "^2.27.0",
