--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bunyan": "^1.8.14",
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
+    "compression": "^1.7.4",
     "concurrently": "^5.2.0",
     "config": "^3.3.1",
     "content-range": "^1.1.0",
